force-app/main/default/objects/Competitor__c/fields/Competitor_for__c.field-meta.xml
<CustomField>
    <fullName>Competitor_for__c</fullName>
    <description>Choose all business lines that competitor is competing for.</description>
    <label>Competitor for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Lines</valueSetName>
    </valueSet>
</CustomField>