force-app/main/default/objects/Competitor__c/fields/Estimated_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Market_Share__c</fullName>
    <description>Estimated Market Share</description>
    <label>Estimated Market Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>