force-app/main/default/objects/Competitor__c/fields/Global_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Global_Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If is a global competitor or not</description>
    <label>Global Competitor</label>
    <type>Checkbox</type>
</CustomField>