force-app/main/default/objects/Competitor__c/fields/Offered_Products__c.field-meta.xml
<CustomField>
    <fullName>Offered_Products__c</fullName>
    <description>Products the competitors offer</description>
    <label>Offered Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>