force-app/main/default/objects/Competitor__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <description>Enter all the strength that competitor against us</description>
    <label>Strengths</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>