force-app/main/default/objects/Competitor__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <description>Enter weaknesses that competitor compare with us</description>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>